# Loguard

./: CMakeLists.txt  LICENSE  README.md  install.sh
config/: config.toml.example
openrc/: loguard.init
packaging/: loguard-check.service  loguard-check.timer  loguard.service
src/: config.cpp  config.hpp  integrity.cpp  integrity.hpp  main.cpp  pam.cpp  pam.hpp  pam_hook.c  paths.hpp  queue.cpp  queue.hpp  telegram.cpp  telegram.hpp  util.cpp  util.hpp
